# itm_prints

./: .project  Cargo.toml  build_output.txt  build_parser.pl  embedded.code-workspace  link.x  memory copy.x  memory.x
.cargo/: config.toml
src/: board.rs  itm_debug.rs  main.rs  startup_stm32f429.rs
